unpackaged/main/default/objects/EmailMessage/fields/Email_Sent_by_Hour__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_by_Hour__c</fullName>
    <description>This field is used for reporting to track emails sent per hour.</description>
    <formula>Value(MID(TEXT( MessageDate - (0.0417*4)), 12, 2))</formula>
    <label>Email Sent by Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>