unpackaged/main/default/objects/EmailMessage/fields/Sent_to_Calabrio__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Calabrio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to Calabrio</label>
    <type>Checkbox</type>
</CustomField>